Fixed Photo spacing
The divs were messing with the spacing next to the photos so I just got rid of them

--- a/photography/photo.css
+++ b/photography/photo.css
@@ -1,3 +1,12 @@
 li.media {
   padding: 10px;
 }
+
+div.media-middle {
+    padding-right: 0px;
+}
+
+div.media-body {
+    min-width: 60px;
+    width: 240px;
+}
